--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Photo Card 1 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="idore.jpg" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/600x400/ffb6c1/fff?text=Happy+Moment" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Summer Adventures</h3>
                             <p class="text-gray-400">Laughs and sunshine on a perfect day.</p>
@@ -169,7 +169,7 @@
                     </div>
                     <!-- Photo Card 2 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="idore1.jpg" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/600x400/90ee90/fff?text=Joyful+Smile" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Winter Wonderland</h3>
                             <p class="text-gray-400">Warm smiles on a cool, crisp evening.</p>
@@ -177,7 +177,7 @@
                     </div>
                     <!-- Photo Card 3 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="400" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="idore2.jpg" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/600x400/add8e6/fff?text=New+Memories" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Happy Moments</h3>
                             <p class="text-gray-400">Celebrating milestones and making new memories.</p>
@@ -185,7 +185,7 @@
                     </div>
                     <!-- Photo Card 4 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="idore3.jpg" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/600x400/ffcccb/fff?text=Beautiful+Day" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Summer Adventures</h3>
                             <p class="text-gray-400">Laughs and sunshine on a perfect day.</p>
@@ -193,7 +193,7 @@
                     </div>
                     <!-- Photo Card 5 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="idore4.jpg" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/600x400/ffa07a/fff?text=Cherished+Times" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Winter Wonderland</h3>
                             <p class="text-gray-400">Warm smiles on a cool, crisp evening.</p>
@@ -201,7 +201,7 @@
                     </div>
                     <!-- Photo Card 6 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="400" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="idore5.jpg" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/600x400/bdb76b/fff?text=Celebration" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Happy Moments</h3>
                             <p class="text-gray-400">Celebrating milestones and making new memories.</p>
@@ -209,7 +209,7 @@
                     </div>
                     <!-- Photo Card 7 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="idore6.jpg" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/600x400/c7a9c7/fff?text=Always+Together" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Special Memories</h3>
                             <p class="text-gray-400">More beautiful moments to cherish.</p>
@@ -217,7 +217,7 @@
                     </div>
                     <!-- Photo Card 8 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="idore7.jpg" alt="Another special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/600x400/87cefa/fff?text=Looking+Ahead" alt="Another special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">New Adventures</h3>
                             <p class="text-gray-400">Looking forward to what's to come.</p>
