--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
         </header>
 
         <!-- Gallery of images -->
-        <section class="photos-section py-20 px-8 bg-gray-900" id="memories">
+        <section class="photos-section py-16 sm:py-20 px-4 sm:px-8 bg-gray-900" id="memories">
             <div class="container mx-auto max-w-6xl">
-                <h2 class="text-3xl md:text-5xl font-['Playfair_Display'] font-bold text-center mb-16 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">
+                <h2 class="text-3xl md:text-5xl font-['Playfair_Display'] font-bold text-center mb-12 sm:mb-16 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">
                     A Collection of Joyful Moments
                 </h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                     <!-- Photo Card 1 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://placehold.co/600x400/ffb6c1/fff?text=Happy+Moment" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
@@ -228,13 +228,13 @@
         </section>
 
         <!-- Personalized message from friends/family -->
-        <section class="py-20 px-8 bg-gray-950">
+        <section class="py-16 sm:py-20 px-4 sm:px-8 bg-gray-950">
             <div class="container mx-auto max-w-3xl">
                 <div class="message-card p-8 md:p-12 text-center" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
-                    <h2 class="text-3xl md:text-4xl font-['Playfair_Display'] font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-blue-500">
+                    <h2 class="text-2xl md:text-4xl font-['Playfair_Display'] font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-blue-500">
                         A Message for Hope Etieno Bassey
                     </h2>
-                    <p class="text-lg text-gray-300 leading-relaxed">
+                    <p class="text-base sm:text-lg text-gray-300 leading-relaxed">
                         "Your compassion, strength, and unwavering love inspire everyone around you. You are the heart of our world, and we are so incredibly grateful for you. May this new year of life be filled with as much joy as you bring to others. Happy Birthday!"
                     </p>
                 </div>
@@ -242,11 +242,11 @@
         </section>
 
         <!-- Final call to action -->
-        <section class="py-20 text-center bg-gray-900">
+        <section class="py-16 sm:py-20 px-4 text-center bg-gray-900">
             <h2 class="text-3xl md:text-5xl font-['Playfair_Display'] font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-pink-400 to-fuchsia-600">
                 Let's Make This Year Unforgettable
             </h2>
-            <p class="text-lg text-gray-300 max-w-2xl mx-auto mb-8">
+            <p class="text-base sm:text-lg text-gray-300 max-w-2xl mx-auto mb-8">
                 Your journey is just beginning. What new adventure will you take on?
             </p>
             <button id="start-celebration-btn" class="px-8 py-4 rounded-full text-lg font-bold transition transform hover:scale-105 duration-300 bg-gradient-to-br from-fuchsia-600 to-violet-600 hover:from-fuchsia-700 hover:to-violet-700 shadow-xl text-white">
@@ -746,4 +746,3 @@
     </script>
 </body>
 </html>
-
