--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                     <!-- Photo Card 1 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="uploaded:image_d1879b.png-f61b1899-638e-4e71-8ac4-2f459855eee2" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/400x288/E6E6FA/000000?text=Joyful+Moments" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Summer Adventures</h3>
                             <p class="text-gray-400">Laughs and sunshine on a perfect day.</p>
@@ -169,7 +169,7 @@
                     </div>
                     <!-- Photo Card 2 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="uploaded:image_d18396.png-85853b9e-9950-480e-89ac-8db963fcbce9" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/400x288/967bb6/000000?text=Winter+Wonderland" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Winter Wonderland</h3>
                             <p class="text-gray-400">Warm smiles on a cool, crisp evening.</p>
@@ -177,7 +177,7 @@
                     </div>
                     <!-- Photo Card 3 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="400" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="uploaded:image_d17896.png-8c65fe47-6b70-424d-9798-9bebb88f55dd" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/400x288/F08080/000000?text=Happy+Moments" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Happy Moments</h3>
                             <p class="text-gray-400">Celebrating milestones and making new memories.</p>
@@ -185,7 +185,7 @@
                     </div>
                     <!-- Photo Card 4 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="uploaded:image_c6936c.png-5dd38c1e-0aa6-4c1c-a918-a6f6d0291ee8" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/400x288/ADD8E6/000000?text=Beautiful+Day" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Beautiful Day</h3>
                             <p class="text-gray-400">A beautiful day to remember and cherish.</p>
@@ -193,7 +193,7 @@
                     </div>
                     <!-- Photo Card 5 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="uploaded:image_c68b4c.png-292e26a3-2964-4e2f-b91f-7f8a20a1a779" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/400x288/90EE90/000000?text=Cherished+Times" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Cherished Times</h3>
                             <p class="text-gray-400">Treasuring the little moments that matter most.</p>
@@ -201,7 +201,7 @@
                     </div>
                     <!-- Photo Card 6 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="400" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="uploaded:image_d18b3d.png-ac205d9d-0d27-4f0e-a234-5843924b29f2" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/400x288/F0E68C/000000?text=Celebration" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Celebration</h3>
                             <p class="text-gray-400">Celebrating milestones and making new memories.</p>
@@ -209,7 +209,7 @@
                     </div>
                     <!-- Photo Card 7 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="https://placehold.co/400x288/1f2937/d1d5db?text=Image+7" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/400x288/87CEFA/000000?text=Special+Memories" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Special Memories</h3>
                             <p class="text-gray-400">More beautiful moments to cherish.</p>
@@ -217,7 +217,7 @@
                     </div>
                     <!-- Photo Card 8 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
-                        <img src="https://placehold.co/400x288/1f2937/d1d5db?text=Image+8" alt="Another special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
+                        <img src="https://placehold.co/400x288/DDA0DD/000000?text=Looking+Ahead" alt="Another special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">Looking Ahead</h3>
                             <p class="text-gray-400">Looking forward to what's to come.</p>
